--- a/jquery/index.html
+++ b/jquery/index.html
@@ -3,17 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AJAX Code Sample</title>
+  <title>jQuery and JSON Code Sample</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<div class="container"><div class="artists"></div></div>
+<div class="container"> 
+  <h2 class="artist-name mt-3">Artists</h2>
+  <ul class="info-artists"></ul>
+  <button class="load-info btn btn-primary">Load Info</button>
+</div>
 
 <script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
+
 </body>
 </html>
