--- a/data-attributes/index.html
+++ b/data-attributes/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Mastering Code</title>
+  <title>Data Attributes</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
 </head>
