--- a/rendering-json-to-dom/index.html
+++ b/rendering-json-to-dom/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Mastering Code</title>
+  <title>Rendering JSON dat to the DOM</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
